# napari-spaces

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_spaces/: _widget.py  napari.yaml
src/napari_spaces/_tests/: test_widget.py
