[metadata]
name = napari-spaces

author = Alister Burt
author_email = alisterburt@gmail.com
url = https://github.com/alisterburt/napari-spaces
license = BSD-3-Clause
description = visualise data from different spaces in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/alisterburt/napari-spaces/issues
    Documentation = https://github.com/alisterburt/napari-spaces#README.md
    Source Code = https://github.com/alisterburt/napari-spaces
    User Support = https://github.com/alisterburt/napari-spaces/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-spaces = napari_spaces:napari.yaml
